--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -14,7 +6,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: antiquewhite;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
