--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,9 @@ button:focus {
   border-radius: 5px;
   transition: all 300ms;
 }
+
+.ten:hover {
+  color: #494949;
+  border: 2px solid #494949;
+  border-radius: 50px;
+}
