--- a/src/App.css
+++ b/src/App.css
@@ -28,17 +28,18 @@
 
 .output {
   background-color: white;
-  width: 50vw;
+  width: 40vw;
   height: 10vh;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: column;
   align-items: center;
   color: black;
+  margin-bottom: 10px;
 }
 
 button {
-  width: 200px;
+  width: 250px;
   padding: 20px;
   font-size: 20px;
   font-weight: 700;
