--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@
   margin-bottom: 10px;
 }
 
+.length {
+  width: 40px;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 10px;
+  cursor: pointer;
+  border: none;
+}
+
 button {
   width: 250px;
   padding: 20px;
