--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,16 @@
   border: none;
 }
 
+.copy {
+  width: 40px;
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 10px;
+  cursor: pointer;
+  border: none;
+}
+
 button {
   width: 250px;
   padding: 20px;
@@ -77,4 +87,25 @@ button:focus {
   color: #494949;
   border: 2px solid #494949;
   border-radius: 50px;
+}
+
+.twelve {
+    background: #fff;
+    color: #383b3a;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 3px #ccc;
+    transition: transform 100ms;
+}
+
+.twelve:hover {
+    transform: translateY(1px);
+    box-shadow: 0 2px #ccc;
+}
+
+.text {
+  color: black;
+  /* border: 2px solid red; */
+  margin: 10px 250px;
+  font-size: 24px;
 }
