--- a/src/App.css
+++ b/src/App.css
@@ -48,15 +48,6 @@
   border: none;
 }
 
-.copy {
-  width: 40px;
-  padding: 20px;
-  font-size: 20px;
-  font-weight: 700;
-  margin-right: 10px;
-  cursor: pointer;
-  border: none;
-}
 
 button {
   width: 250px;
@@ -90,6 +81,7 @@ button:focus {
 }
 
 .twelve {
+  margin-left: 10px ;
     background: #fff;
     color: #383b3a;
     border: 1px solid #ccc;
